# LinguisticsTypes

./: LinguisticsTypes.cabal  NaturalLanguageTypes.cabal  README.md  cabal.project  changelog.md  devel-stack.yaml  stack.yaml
Linguistics/: Types.hs
NLP/Text/: BTI.hs
NLP/Text/BTI/: Internal.hs
tests/: BenchmarkBuilder.hs  properties.hs
