name:           LinguisticsTypes
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2015
copyright:      Christian Hoener zu Siederdissen, 2015
homepage:       https://github.com/choener/LinguisticsTypes
bug-reports:    https://github.com/choener/LinguisticsTypes/issues
maintainer:     choener@bioinf.uni-leipzig.de
category:       Natural Language Processing
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.1
synopsis:       Collection of types for natural language
description:
                Types used for natural language applications



Extra-Source-Files:
  README.md
  changelog.md



library
  build-depends: base         >= 4.7  && < 4.9
               , aeson        >= 0.9  && < 0.10
               , binary       >= 0.7  && < 0.8
               , cereal       >= 0.4  && < 0.5
               , cereal-text  >= 0.1  && < 0.2
               , log-domain   >= 0.10 && < 0.11
               , QuickCheck   >= 2.7  && < 2.9
               , text         >= 1.2  && < 1.3
  exposed-modules:
    Linguistics.Types

  default-extensions: BangPatterns
                    , DeriveGeneric
  default-language:
    Haskell2010

  ghc-options:
    -O2 -funbox-strict-fields



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: TemplateHaskell
  build-depends: base
               , LinguisticsTypes
               , QuickCheck
               , test-framework               >= 0.8  && < 0.9
               , test-framework-quickcheck2   >= 0.3  && < 0.4
               , test-framework-th            >= 0.2  && < 0.3



source-repository head
  type: git
  location: git://github.com/choener/LinguisticsTypes

