name:           LinguisticsTypes
version:        0.0.0.2
author:         Christian Hoener zu Siederdissen, 2015
copyright:      Christian Hoener zu Siederdissen, 2015
homepage:       https://github.com/choener/LinguisticsTypes
bug-reports:    https://github.com/choener/LinguisticsTypes/issues
maintainer:     choener@bioinf.uni-leipzig.de
category:       Natural Language Processing
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.2
synopsis:       Collection of types for natural language
description:
                Types used for natural language applications. Includes an
                internalized text type, @BTI@ which represents internalized
                @Text@ values with @Int@s.



Extra-Source-Files:
  README.md
  changelog.md



library
  build-depends: base               >= 4.7      &&  < 5.0
               , aeson              >= 0.8      &&  < 0.12
               , bimaps             >= 0.1      &&  < 0.2
               , binary             >= 0.7      &&  < 0.8
               , bytestring         >= 0.10.4   &&  < 0.11
               , cereal             >= 0.4      &&  < 0.6
               , cereal-text        >= 0.1      &&  < 0.2
               , deepseq            >= 1.3      &&  < 1.5
               , hashable           >= 1.2      &&  < 1.3
               , intern             >= 0.9      &&  < 0.10
               , log-domain         >= 0.10     &&  < 0.11
               , QuickCheck         >= 2.7      &&  < 2.9
               , string-conversions >= 0.4      &&  < 0.5
               , text               >= 1.2      &&  < 1.3
               , text-binary        >= 0.1      &&  < 0.3
               , utf8-string        >= 1.0      &&  < 1.1
               , vector-th-unbox    >= 0.2      &&  < 0.3
  exposed-modules:
    Linguistics.Types
    NLP.Text.BTI
    NLP.Text.BTI.Internal

  default-extensions: BangPatterns
                    , DeriveGeneric
                    , FlexibleContexts
                    , MultiParamTypeClasses
                    , TemplateHaskell
                    , TypeFamilies
  default-language:
    Haskell2010

  ghc-options:
    -O2 -funbox-strict-fields



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , ScopedTypeVariables
                    , TemplateHaskell
  build-depends: base
               , aeson
               , binary
               , cereal
               , LinguisticsTypes
               , QuickCheck
               , string-conversions
               , tasty                >= 0.11
               , tasty-quickcheck     >= 0.8
               , tasty-th             >= 0.1



benchmark BenchmarkBuilder
  build-depends: base
               , bytestring
               , containers
               , criterion                >= 1.0.2  &&  < 1.2
               , deepseq
               , LinguisticsTypes
               , text
  hs-source-dirs:
    tests
  main-is:
    BenchmarkBuilder.hs
  type:
    exitcode-stdio-1.0
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , ScopedTypeVariables
  ghc-options:
    -O2
    -rtsopts



source-repository head
  type: git
  location: git://github.com/choener/LinguisticsTypes

